# edu-ffplay

./: CMakeLists.txt  README.md
include/: config.h
third/lib/: libavdevice.dylib  libavfilter.dylib  libavformat.dylib  libavutil.dylib  libpostproc.dylib  libswresample.dylib  libswscale.dylib
